Fixing hero images

--- a/EM-Back2Back-FINAL-1.html
+++ b/EM-Back2Back-FINAL-1.html
@@ -175,7 +175,13 @@ tr { font-size:1px; mso-line-height-alt:0; mso-margin-top-alt:1px; }
 		<table width="600" align="center" bgcolor="#ffffff" class ="w360" cellspacing="0" cellpadding="0">
 			<tr>
 				<td>
-					
+					<table>
+						<tr>
+							<td>
+								
+							</td>
+						</tr>
+					</table>
 				</td>
 			</tr>
 		</table>
